# apuestapr-registration

./: .env  .flaskenv  .gitignore  README.md  TROUBLESHOOTING.md  app.py  pyproject.toml  render.yaml  requirements.txt  test_didit.py  test_didit_status.py  test_shufti_2.py  test_whg.py
assets/: styles-kambi.css
env/: pyvenv.cfg
example-shufti-app/: README.md  package-lock.json  package.json  server.js
example-shufti-app/public/: index.html
src/: config.py  kyc_factory.py  onfido.py  shufti.py  whitehat.py
src/blueprints/: __init__.py  pre_registration.py  qr_code.py  registration.py
src/kyc_services/: README.md  __init__.py  base.py  didit_service.py  onfido_service.py  shufti_service.py
src/models/: mongo.py  pre_registration.py  registration.py
static/: otc-iframe.html  sst-iframe.html
templates/: account-selection-form.html  admin.html  home.html  kambi.html  kyc.html  list.html  nav.html  otc-iframe.html  pre-registration-form.html  public-nav-preregistration-start-to-en.html  public-nav-preregistration-start-to-es.html  public-nav.html  register.html  registration-process-didit.html  registration-process-shufti.html  registration-process.html  registration-receipt.html  registration-review 3.html  registration-review.html  registration-start-en.html  registration-start.html  sst-iframe.html  start-pre-registration.html
test_scripts/: test_env.py  test_proxy.py  test_whg.py
wiki/: KYC-flow.md  OUTPUT-FROM-EXAMPLE-SHUFTI-APP.txt  PLANS-FOR-KYC-MIGRATION.md  SHUFTI-RESPONSE-EVENTS.md  SHUFTI-STATE-MAPPING.md  response.md
(+4 files in other folders)
