[tool.poetry]
name = "apuestapr-registration"
version = "0.1.0"
description = ""
authors = ["Jason Raede <jason.raede@gmail.com>"]
readme = "README.md"
packages = [{include = "apuestapr_registration"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pymongo = "^4.4.1"
pydantic = "^2.0.3"
gunicorn = "^21.2.0"
authlib = "^1.2.1"
onfido-python = "^2.7.0"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
